Reinegrated doctrine branch

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -4,20 +4,20 @@ phpSettings.display_errors = 0
 includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
-appnamespace = "Application"
+; appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 phpSettings.date.timezone = "Europe/London"
 
 ; db
-resources.db.adapter = PDO_MYSQL
-resources.db.params.host = localhost
-resources.db.params.username = root
-resources.db.params.password = erek0sa
-resources.db.params.dbname = goddesses
+; resources.db.adapter = PDO_MYSQL
+; resources.db.params.host = localhost
+; resources.db.params.username = root
+; resources.db.params.password = erek0sa
+; resources.db.params.dbname = goddesses
 
 ; namespaces and autoloader
-//appnamespace = "Coda"
+appnamespace = "God"
 autoloaderNamespaces.Doctrine = "Doctrine_"
 autoloaderNamespaces.Twitter = "Twitter_"
 autoloaderNamespaces.Coda = "Coda_"
