Added Coda Library. Added search functionality and a few other tweaks

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -19,12 +19,14 @@ phpSettings.date.timezone = "Europe/London"
 ; namespaces and autoloader
 appnamespace = "God"
 autoloaderNamespaces.Doctrine = "Doctrine_"
-autoloaderNamespaces.Twitter = "Twitter_"
+; autoloaderNamespaces.Twitter = "Twitter_"
 autoloaderNamespaces.Coda = "Coda_"
 
 ; doctrine - user:pass@host/db
 doctrine.connection_string = "mysql://root:erek0sa@localhost/goddesses"
 doctrine.cache = false
+
+hostname = erekosa.privatedns.org
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.view.doctype = "HTML5"
