--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,6 +30,7 @@ hostname = erekosa.privatedns.org
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.view.doctype = "HTML5"
+resources.view.helperPath.Coda_View_Helper = APPLICATION_PATH "/../library/Coda/View/Helper/"
 
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
