--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -19,7 +19,7 @@ phpSettings.date.timezone = "Europe/London"
 ; namespaces and autoloader
 appnamespace = "God"
 autoloaderNamespaces.Doctrine = "Doctrine_"
-; autoloaderNamespaces.Twitter = "Twitter_"
+autoloaderNamespaces.Twitter = "Twitter_"
 autoloaderNamespaces.Coda = "Coda_"
 
 ; doctrine - user:pass@host/db
