Working version of ACL implemetation. Few bugs to fix.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -21,6 +21,7 @@ appnamespace = "God"
 autoloaderNamespaces.Doctrine = "Doctrine_"
 autoloaderNamespaces.Twitter = "Twitter_"
 autoloaderNamespaces.Coda = "Coda_"
+autoloaderNamespaces.ACL = "ACL_"
 
 ; doctrine - user:pass@host/db
 doctrine.connection_string = "mysql://root:erek0sa@localhost/goddesses"
