Adding Memcache stats

--- a/.ftpconfig
+++ b/.ftpconfig
@@ -14,5 +14,5 @@
     "connTimeout": 10000,
     "keepalive": 100,
     "keyboardInteractive": false,
-    "watch": []
+    "watch": ["./tests/*.txt"]
 }
