Bottom rankings are getting jammed. So I've set the same rules at the top rankings which will pile up the high rankings.

--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
-include_path=5;com.zend.php.phpunit.CONTAINER\u00055;org.zend.php.framework.CONTAINER\u00050;/ZF
+include_path=0;/zf\u00051;/home/mwood/public_html/Zend Framework
+phpVersion=php5.4
 use_asp_tags_as_php=false
