Update to Newer DB

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -23,7 +23,7 @@ autoloaderNamespaces.Twitter = "Twitter_"
 autoloaderNamespaces.Coda = "Coda_"
 
 ; doctrine - user:pass@host/db
-doctrine.connection_string = "mysql://root:erek0sa@localhost/goddesses"
+doctrine.connection_string = "mysql://web:erek0sa@192.168.0.18/goddesses"
 doctrine.cache = false
 
 hostname = erekosa.privatedns.org
